--- a/cargo-pkg-info-struct-builder/Cargo.toml
+++ b/cargo-pkg-info-struct-builder/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "cargo-pkg-info-struct-builder"
-version = "0.1.0"
+version = "0.1.0-alpha"
+authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
 edition = "2021"
+description = "A Rust crate used as a build dependency which provides structured access to Cargo Package Info."
+repository = "https://github.com/jzombie/rust-cargo-pkg-info-struct-builder"
+license = "MIT"
 
 [dependencies]
-cargo_metadata = "0.19.1"
-chrono = "0.4.39"
