Use static methods (#2)

--- a/cargo-pkg-info-struct-builder/Cargo.toml
+++ b/cargo-pkg-info-struct-builder/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-pkg-info-struct-builder"
-version = "0.1.0-alpha1"
+version = "0.1.0-alpha2"
 authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
 edition = "2021"
 description = "A Rust crate used as a build dependency which provides structured access to Cargo Package Info."
@@ -8,3 +8,7 @@ repository = "https://github.com/jzombie/rust-cargo-pkg-info-struct-builder"
 license = "MIT"
 
 [dependencies]
+
+[dev-dependencies]
+syn = { version = "2.0.98", features = ["full"] }
+tempfile = "3.16.0"
