--- a/cargo-pkg-info-test-app/Cargo.toml
+++ b/cargo-pkg-info-test-app/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cargo-pkg-info-test-app"
 version = "1.2.3-beta"
-authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
+authors = ["Test Author 1 <test1@example.com>", "Test Author 2 <test2@example.com>"]
 description = "An example app to test cargo-pkg-info-struct-builder"
 repository = "https://github.com/jzombie/rust-cargo-pkg-info-struct-builder"
 homepage = "https://crates.io/crates/cargo-pkg-info-struct-builder"
