--- a/cargo-pkg-info-test-app/Cargo.toml
+++ b/cargo-pkg-info-test-app/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT"
 edition = "2021"
 rust-version = "1.84"
 readme = "README.md"
+license-file = "MOCK-LICENSE.txt"
 publish = false
 
 [dependencies]
