--- a/cargo-pkg-info-struct-builder/Cargo.toml
+++ b/cargo-pkg-info-struct-builder/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-pkg-info-struct-builder"
-version = "0.1.0-alpha3"
+version = "0.1.0-alpha4"
 authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
 edition = "2021"
 description = "A Rust crate used as a build dependency which provides structured access to Cargo Package Info."
@@ -8,6 +8,7 @@ repository = "https://github.com/jzombie/rust-cargo-pkg-info-struct-builder"
 license = "MIT"
 
 [dependencies]
+toml = "0.8.20"
 
 [dev-dependencies]
 syn = { version = "2.0.98", features = ["full"] }
