--- a/.github/workflows/rust-tests.yml
+++ b/.github/workflows/rust-tests.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    name: Run Rust Tests
+    name: Run Rust Tests (OS = ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
