--- a/cargo-pkg-info-test-app/Cargo.toml
+++ b/cargo-pkg-info-test-app/Cargo.toml
@@ -12,7 +12,9 @@ readme = "README.md"
 license-file = "MOCK-LICENSE.txt"
 publish = false
 
-[dependencies]
-
 [build-dependencies]
 cargo-pkg-info-struct-builder = { path = "../cargo-pkg-info-struct-builder" }
+string-replace-all = "0.1.1"
+
+[dependencies]
+
