Add handling of multi-line vars

--- a/cargo-pkg-info-struct-builder/Cargo.toml
+++ b/cargo-pkg-info-struct-builder/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/jzombie/rust-cargo-pkg-info-struct-builder"
 license = "MIT"
 
 [dependencies]
+string-auto-indent = "0.1.0-alpha"
 toml = "0.8.20"
 
 [dev-dependencies]
